--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "typescript": "^3.4.3",
+    "vue-swiper-component": "^2.1.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
